--- a/home.html
+++ b/home.html
@@ -21,10 +21,19 @@
 </nav>
 <div>
 <main>
+  <h2>Welcome</h2>
+  <p>Welcome to PC Parts Explained! This website is for people who are interested in building a PC for the very first time,
+  but lack the technical knowledge to feel confident in doing so.
+  <br>I will be explaining in laymans terms to help describe the functionality of the part, and provide my own perspective on how
+  much I think should be invested in such a part.
+  <br>I will be going over the 8 parts mentioned in the navigation bar: the CPU, motherboard, RAM, GPU,
+  SDD/HDD, and PSU! PLEASE NOTE that I will be providing my own perspective on the part, so my word shouldn't be taken as law!
+  I just want to provide a helpful conglomerate of information for first time PC builders to keep looking over. Use this website to learn the
+  basics of the PC parts, and then extend your knowledge by researching more in depth!</p>
 </main>
 <footer>
+  <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu </p>
 </footer>
-
 </div>
 </body>
 </html>
