--- a/sddhdd.html
+++ b/sddhdd.html
@@ -10,11 +10,19 @@
 </header>
 
 <nav>
+  <a href = "home.html">Home</a> &nbsp
+  <a href = "cpu.html">CPU</a> &nbsp
+  <a href = "motherboard.html">Motherboard</a> &nbsp
+  <a href = "ram.html">RAM</a> &nbsp
+  <a href = "gpu.html">GPU</a> &nbsp
+  <a href = "sddhdd.html">SDD/HDD</a> &nbsp
+  <a href = "psu.html">PSU</a> &nbsp
 </nav>
 <div>
 <main>
 </main>
 <footer>
+  <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu </p>
 </footer>
 
 </div>
