edited home.html and added parts for cpu.html

--- a/cpu.html
+++ b/cpu.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-<title> Title of Website </title>
+<title> PC  </title>
 <meta charset = "utf-8">
 </head>
 
 <body>
 <header>
+  <h1>PC Parts Explained</h1>
 </header>
 
 <nav>
@@ -20,6 +21,16 @@
 </nav>
 <div>
 <main>
+  <h2>The CPU</h2>
+  <p>The CPU (Central Processing Unit), it a very important part as it acts as the brain of the PC.
+    This part is integral for a PC, as the PC sends instructions to the CPU, where they are carried out. Without a CPU, you will not have a PC.
+
+	When considering what kind of CPU you want in your own PC, you have to consider a term called bottlenecking.
+  Bottlenecking happens when your GPU’s (Graphics Processing Unit) performance is hindered by the capabilities of your CPU.
+  This typically occurs when a computer build has a high-end GPU and a low-end CPU. To avoid bottlenecking, you should generally choose a CPU that is close in performance to
+</p>
+<h2>The Brands of CPU</h2>
+
 </main>
 <footer>
   <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu </p>
