--- a/home.html
+++ b/home.html
@@ -22,14 +22,21 @@
 <div>
 <main>
   <h2>Welcome</h2>
-  <p>Welcome to PC Parts Explained! This website is for people who are interested in building a PC for the very first time,
-  but lack the technical knowledge to feel confident in doing so.
-  <br>I will be explaining in laymans terms to help describe the functionality of the part, and provide my own perspective on how
-  much I think should be invested in such a part.
-  <br>I will be going over the 8 parts mentioned in the navigation bar: the CPU, motherboard, RAM, GPU,
-  SDD/HDD, and PSU! PLEASE NOTE that I will be providing my own perspective on the part, so my word shouldn't be taken as law!
-  I just want to provide a helpful conglomerate of information for first time PC builders to keep looking over. Use this website to learn the
-  basics of the PC parts, and then extend your knowledge by researching more in depth!</p>
+  <p>Welcome to PC Parts Explained! This website is intended for people who are interested in building their first PC, but lack the technical knowledege to feel confident in doing so.
+    I will be explaining in laymans terms the functionality of the part, and how it will affect the whole PC. I will also provide my perspective on the individual part: how much
+    I recommend spending on a part based on budget, the brands I find the best, and what power of parts is recommended based on intended specs.
+  <br><br>I will be going over the following parts in detail:
+  <ul>
+    <li><a href = "cpu.html">CPU</a></li>
+    <li><a href = "motherboard.html">Motherboard</a></li>
+    <li><a href = "ram.html">RAM</a></li>
+    <li><a href = "gpu.html">GPU</a></li>
+    <li><a href = "sddhdd.html">SDD/HDD</a></li>
+    <li><a href = "psu.html">PSU</a></li>
+  </ul>
+  PLEASE NOTE I will be providing my own perspective on each part of the PC, but that doesn't mean my word should be taken as law! I want this website to be a
+  hub of information for beginner PC builders to reference, but this website should be used to learn the basics of PC parts. I recommend extending your knowledege
+  of PCs by doing extended research!</p>
 </main>
 <footer>
   <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu </p>
