--- a/cpu.html
+++ b/cpu.html
@@ -25,11 +25,15 @@
   <p>The CPU (Central Processing Unit), it a very important part as it acts as the brain of the PC.
     This part is integral for a PC, as the PC sends instructions to the CPU, where they are carried out. Without a CPU, you will not have a PC.
 
-	When considering what kind of CPU you want in your own PC, you have to consider a term called bottlenecking.
+	<br>
+  When considering what kind of CPU you want in your own PC, you have to consider a term called bottlenecking.
   Bottlenecking happens when your GPU’s (Graphics Processing Unit) performance is hindered by the capabilities of your CPU.
   This typically occurs when a computer build has a high-end GPU and a low-end CPU. To avoid bottlenecking, you should generally choose a CPU that is close in performance to
 </p>
 <h2>The Brands of CPU</h2>
+<p>When considering a CPU, there a two large brands in CPU production: <b>Intel</b> and <b>AMD</b>. These two brands have controlled the market of CPUs for a very long time,
+and will primarily be the ones availble for purchase at retail stores and online. It has been generally noted by the Internet that Intel CPUs are much more
+powerful than AMD ones, but that doesn't mean that you shouldn't consider an AMD CPU! I have provided helpful table noting the general pros and cons of both CPUS.</p>
 
 </main>
 <footer>
