Added information about CPU, and made changes to motherboard

--- a/cpu.html
+++ b/cpu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-<title> PC  </title>
+<title>The CPU</title>
 <meta charset = "utf-8">
 </head>
 
@@ -23,7 +23,13 @@
 <main>
   <h2>The CPU</h2>
   <p>The CPU (Central Processing Unit), it a very important part as it acts as the brain of the PC.
-    This part is integral for a PC, as the PC sends instructions to the CPU, where they are carried out. Without a CPU, you will not have a PC.
+    The CPU is integral to the PC, as many instructions sent by other parts of the PC will be handled by the CPU. It is
+    important to consider what you'll be doing with your PC when considering a CPU. You will want a CPU that can handle the things
+    you plan on doing, as a CPU that is too weak will lead to slowdowns and wait times during use.
+
+  <br><br>
+  For new buyers, there are three important things to look for in a CPU: the model series, processor speed, and the amount of cores.
+
 
 	<br>
   When considering what kind of CPU you want in your own PC, you have to consider a term called bottlenecking.
@@ -35,6 +41,15 @@
 and will primarily be the ones availble for purchase at retail stores and online. It has been generally noted by the Internet that Intel CPUs are much more
 powerful than AMD ones, but that doesn't mean that you shouldn't consider an AMD CPU! I have provided helpful table noting the general pros and cons of both CPUS.</p>
 
+<h2>Popular Choices<h2>
+<dl>
+  <dt>Intel i5-9600k</dt>
+  <dd>The Intel i5-9600k is a great budget CPU if you want ot use an Intel Processor in your PC build. </dd>
+  <dt>Intel i7-8700k</dt>
+  <dd>Currently, the best CPU for gaming that currently isn't way too expensive (processors in the i9 series). </dd>
+  <dt>AMD Ryzen 5 1600</dt>
+  <dd>The AMD Ryzen 5 in my eyes is a great budget CPU if you want to use a AMD Processor for your build. </dd>
+</dl>
 </main>
 <footer>
   <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu </p>
