--- a/motherboard.html
+++ b/motherboard.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-<title> Title of Website </title>
+<title> The Motherboard </title>
 <meta charset = "utf-8">
 </head>
 
 <body>
 <header>
+  <h1>PC Parts Explained</h1>
 </header>
 
 <nav>
@@ -20,6 +21,7 @@
 </nav>
 <div>
 <main>
+  <h2>The Motherboard</h2>
 </main>
 <footer>
   <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu </p>
