Edited motherboard page

--- a/cpu.html
+++ b/cpu.html
@@ -23,13 +23,17 @@
 <main>
   <h2>The CPU</h2>
   <p>The CPU (Central Processing Unit), it a very important part as it acts as the brain of the PC.
-    The CPU is integral to the PC, as many instructions sent by other parts of the PC will be handled by the CPU. It is
-    important to consider what you'll be doing with your PC when considering a CPU. You will want a CPU that can handle the things
-    you plan on doing, as a CPU that is too weak will lead to slowdowns and wait times during use.
+    The CPU is integral to the PC, as it performs actions, runs programs, and constantly sends instructions to other parts of the PC.
+    It is important to consider what you'll be doing with your PC when considering a CPU. You will want a CPU that can handle the tasks
+    you plan on doing, as you may experience slowdowns and long wait times during use if your CPU is too weak.
 
   <br><br>
-  For new buyers, there are three important things to look for in a CPU: the model series, processor speed, and the amount of cores.
+  For new buyers, there are three important things to look for in a CPU: the model series, processor speed, and the amount of cores. 
 
+  Along with your CPU, you may possibly need a CPU Cooler if your CPU does not come with one. This is just attached on top
+  of your CPU along with a fan that keeps the CPU cool as they can run extremely hot. One CPU Cooler I can recommended
+  for large cases would be the <a href = "http://www.coolermaster.com/cooling/cpu-air-cooler/hyper-212-evo/">the Cooler Master
+  Hyper 212 Evo</a>, a great budget cooler that usually runs around 30 dollars.
 
 	<br>
   When considering what kind of CPU you want in your own PC, you have to consider a term called bottlenecking.
@@ -39,9 +43,23 @@
 <h2>The Brands of CPU</h2>
 <p>When considering a CPU, there a two large brands in CPU production: <b>Intel</b> and <b>AMD</b>. These two brands have controlled the market of CPUs for a very long time,
 and will primarily be the ones availble for purchase at retail stores and online. It has been generally noted by the Internet that Intel CPUs are much more
-powerful than AMD ones, but that doesn't mean that you shouldn't consider an AMD CPU! I have provided helpful table noting the general pros and cons of both CPUS.</p>
+powerful than AMD ones, but that doesn't mean that you shouldn't consider an AMD CPU! I have provided a helpful table showing pros of both CPU brands.</p>
 
-<h2>Popular Choices<h2>
+<table>
+  <tr>
+    <th>Intel</th>
+    <th>AMD</th>
+  </tr>
+  <tr>
+    <th></th>
+    <th>Generally cheaper than Intel Processors</th>
+  </tr>
+</table>
+
+
+
+
+<h2>Popular Choices</h2>
 <dl>
   <dt>Intel i5-9600k</dt>
   <dd>The Intel i5-9600k is a great budget CPU if you want ot use an Intel Processor in your PC build. </dd>
