--- a/motherboard.html
+++ b/motherboard.html
@@ -22,6 +22,27 @@
 <div>
 <main>
   <h2>The Motherboard</h2>
+      The motherboard acts as the hub for all your pc parts: it allows them to communicate with one another.
+      Your motherboard will be fitted into your PC case, and all of the parts will be connected to it in some way.
+      The CPU, cooler, RAM, and GPU will directly be connected to the motherboard.
+
+      <br><br>
+      From my perspective, a motherboard's price will increase with the amount of additional features it comes with.
+      Some of these additional features can include USB 3.0, SATA III, SLI support, overclock support, and wifi capability.
+      If on a budget, this is the part you can skimp out of if required. The bare minimum for a motherboard should be the
+      one that has features that fit all of your required needs. Do you plan on overclocking? Do you plan on running two
+      GPUs in SLI? Do you plan on running a certain type of RAM? How much RAM do you plan on installing? These are some of the
+      questions you should be answering when looking for a motherboard.
+
+      <br><br>
+      There are only a few things to look out for when deciding on what motherboard to get. First, consider the case size of your PC.
+      Make sure the motherboard you plan on buying will fit inside. Next, make sure the motherboard provides support for your
+      chosen CPU. There are some motherboards that will require a software update in order to run with your chosen CPU. Make sure your motherboard
+      will be compatible with your CPU out of the box, so you will not have to acquire another CPU in order just to update the motherboard. Finally,
+      make sure you will be utilizing all the features of the motherboard you will be buying. There's no point in buying a $300 motherboard when you're
+      not even utilizing all of its features. There isn't much of a difference in a $300 and $150 motherboard in performance, so if you don't require
+      that much, you could go for the $150 one. 
+      </picture>
 </main>
 <footer>
   <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu </p>
