made some css changes

--- a/cpu.html
+++ b/cpu.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+  <div id = "wrapper">
 <header>
   <h1>PC Parts Explained</h1>
 </header>
@@ -28,7 +29,7 @@
     you plan on doing, as you may experience slowdowns and long wait times during use if your CPU is too weak.
 
   <br><br>
-  For new buyers, there are three important things to look for in a CPU: the model series, processor speed, and the amount of cores. 
+  For new buyers, there are three important things to look for in a CPU: the model series, processor speed, and the amount of cores.
 
   Along with your CPU, you may possibly need a CPU Cooler if your CPU does not come with one. This is just attached on top
   of your CPU along with a fan that keeps the CPU cool as they can run extremely hot. One CPU Cooler I can recommended
