--- a/home.html
+++ b/home.html
@@ -5,8 +5,10 @@
 <head>
 <title> PC Parts Explained </title>
 <meta charset = "utf-8">
+<link rel="stylesheet" href="css/web.css">
 </head>
 <body>
+  <div id = "wrapper">
 <header>
   <h1> PC Parts Explained </h1>
 </header>
