--- a/motherboard.html
+++ b/motherboard.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+  <div id = "wrapper">
 <header>
   <h1>PC Parts Explained</h1>
 </header>
@@ -41,7 +42,7 @@
       will be compatible with your CPU out of the box, so you will not have to acquire another CPU in order just to update the motherboard. Finally,
       make sure you will be utilizing all the features of the motherboard you will be buying. There's no point in buying a $300 motherboard when you're
       not even utilizing all of its features. There isn't much of a difference in a $300 and $150 motherboard in performance, so if you don't require
-      that much, you could go for the $150 one. 
+      that much, you could go for the $150 one.
       </picture>
 </main>
 <footer>
