Added PSU information

--- a/psu.html
+++ b/psu.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-<title> Title of Website </title>
+<title>The PSU</title>
 <meta charset = "utf-8">
+<link rel="stylesheet" href="css/web.css">
 </head>
 
 <body>
   <div id = "wrapper">
 <header>
+  <h1> PC Parts Explained </h1>
 </header>
 
 <nav>
@@ -21,6 +23,31 @@
 </nav>
 <div>
 <main>
+  <h2>The PSU</h2>
+  <p>
+    The Power Supply Unit (PSU) somewhat acts like the battery for the PC. The PSU takes the electricity from an outlet and supplies the parts of the
+    PC with power. This is a very important part! It provides energy to all of your computer parts. So it is important to choose a quality one!
+
+    <br><br>
+    Choosing the correct PSU is very imporant. If your PSU cannot supply enough power for the wattage that all the components your PC requires, your PC
+    will not only most likely not turn on, BUT the PSU has a possibility of frying many parts of your PC. A low quality PSU could potentially
+    short-circuit and become a fire hazard. There are cases where a PC set on fire due to a low quality PSU, so I wouldn't skimp out on this part!
+
+    <br><br>
+    When choosing a PSU, you should determine how much wattage your system will require. Generally your CPU and GPU will require a lot of wattage, while
+    the other parts do not require that much. You can calculate the wattage your system will require with websites like <a href = "https://outervision.com/power-supply-calculator">
+    Extreme Outer Vision's Power Supply Calculator</a> or <a href = "https://www.coolermaster.com/power-supply-calculator/"> Cooler Master's Power Supply Calculator</a>.
+    These websites just require you to input the parts you plan on putting in your PC, and it will calculate the wattage your PC requires and give out a recommended
+    PSU to buy.
+
+    <br><br>
+    Once you get the wattage your PC requires, you can choose a PSU! It is recommended that you get a PSU whose wattage is much higher than the wattage required for your PC.
+    For example, if your system requires 475 watts, it is recommended to get a PSU with 600 watts or 700 watts. That way in any circumstances where your system uses more than
+    its required wattage, you have some leeway for your PSU. I would recommend getting a PSU that is about 150 watts more than its required wattage (more if you plan on doing
+    things like overclocking). There are quality grades for PSUS: bronze, silver, gold, platinum, etc. The grade is the assessment for the efficiency of a power supply.
+    I would recommend the Gold quality: it is a quality PSU grade and isn't too expensive like the platinum+ PSUs. 
+
+  </p>
 </main>
 <footer>
   <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu </p>
