--- a/gpu.html
+++ b/gpu.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-<title> Title of Website </title>
+<title>The GPU</title>
 <meta charset = "utf-8">
+<link rel="stylesheet" href="css/web.css">
 </head>
 
 <body>
   <div id = "wrapper">
 <header>
+    <h1> PC Parts Explained </h1>
 </header>
 
 <nav>
