--- a/motherboard.html
+++ b/motherboard.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-<title> The Motherboard </title>
+<title>The Motherboard </title>
 <meta charset = "utf-8">
+<link rel="stylesheet" href="css/web.css">
 </head>
 
 <body>
