added informtion on RAM/PSU

--- a/cpu.html
+++ b/cpu.html
@@ -47,7 +47,7 @@
 and will primarily be the ones availble for purchase at retail stores and online. It has been generally noted by the Internet that Intel CPUs are much more
 powerful than AMD ones, but that doesn't mean that you shouldn't consider an AMD CPU! I have provided a helpful table showing pros of both CPU brands.</p>
 
-<table>
+<table id = "css/cpuTable">
   <tr>
     <th>Intel</th>
     <th>AMD</th>
