--- a/ram.html
+++ b/ram.html
@@ -23,6 +23,27 @@
 </nav>
 <div>
 <main>
+  <h2>The RAM</h2>
+  <p>
+    Random Access Memory (RAM) acts as short term data storage for your PC. It allows you to do the everyday tasks
+    in your PC. If you're into gaming, RAM will allow for a sizable increase in frames per second. All programs in your
+    PC will take some amount of memory, and the RAM will provide for it. With more RAM you will be able to do more
+    tasks simultaneously without any slowdowns or crashes.
+
+    <br><br>
+    When choosing RAM, there are two things to consider: the speed of the RAM, and the amount of RAM. The amount of
+    RAM in your system will provide the largest boost in performance. Usually more ram = better performance. A good
+    amount of RAM is 8 gigabytes for casual use/light gaming. If you want to push higher graphics with more fps,
+    I would recommend 16 gigabytes of RAM. Anything higher may be a little excessive, but up to your discretion.
+    The speed of the RAM is something to consider also. The higher the speed, the higher performance of your RAM.
+    If you are going for higher RAM speeds, you will have to set the speed in your BIOS.
+
+    <br><br>
+    There isn't a specifically recommended RAM to use, just look for model type, speed, and size. Make sure if you're buying
+    multiple RAM sticks that they are consistent in RAM model and speed. A popular RAM model is the
+    <a href = "https://www.amazon.com/Corsair-Vengeance-3000MHz-Desktop-Memory/dp/B0134EW7G8"> Corsair Vengence</a>, which
+    usually comes in 8 Gigabytes per RAM stick.
+
 </main>
 <footer>
   <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu </p>
