--- a/psu.html
+++ b/psu.html
@@ -20,6 +20,7 @@
   <a href = "gpu.html">GPU</a> &nbsp
   <a href = "sddhdd.html">SDD/HDD</a> &nbsp
   <a href = "psu.html">PSU</a> &nbsp
+  <a href = "sampleBuilds.html">Sample Builds</a>
 </nav>
 <div>
 <main>
@@ -45,7 +46,7 @@
     For example, if your system requires 475 watts, it is recommended to get a PSU with 600 watts or 700 watts. That way in any circumstances where your system uses more than
     its required wattage, you have some leeway for your PSU. I would recommend getting a PSU that is about 150 watts more than its required wattage (more if you plan on doing
     things like overclocking). There are quality grades for PSUS: bronze, silver, gold, platinum, etc. The grade is the assessment for the efficiency of a power supply.
-    I would recommend the Gold quality: it is a quality PSU grade and isn't too expensive like the platinum+ PSUs. 
+    I would recommend the Gold quality: it is a quality PSU grade and isn't too expensive like the platinum+ PSUs.
   </p>
 </main>
 <footer>
