--- a/sddhdd.html
+++ b/sddhdd.html
@@ -20,6 +20,7 @@
   <a href = "gpu.html">GPU</a> &nbsp
   <a href = "sddhdd.html">SDD/HDD</a> &nbsp
   <a href = "psu.html">PSU</a> &nbsp
+  <a href = "sampleBuilds.html">Sample Builds</a>
 </nav>
 <div>
 <main>
