added additional information about cpu and ram

--- a/cpu.html
+++ b/cpu.html
@@ -31,17 +31,23 @@
     you plan on doing, as you may experience slowdowns and long wait times during use if your CPU is too weak.
 
   <br><br>
-  For new buyers, there are three important things to look for in a CPU: the model series, processor speed, and the amount of cores.
+  For new buyers, there are three important things to look for in a CPU: the model series, processor speed, and the amount of cores. All three of these features
+  affect the efficiency of the CPU. Of course you should consider what you plan to do on your PC before choosing what model series, processor speed, and
+  amount of cores you need. If you have too many cores and aren't effectively using all of them, you are wasting potential money. If your model series is
+  too much for what you want to do, you are wasting potential money.
 
   Along with your CPU, you may possibly need a CPU Cooler if your CPU does not come with one. This is just attached on top
   of your CPU along with a fan that keeps the CPU cool as they can run extremely hot. One CPU Cooler I can recommended
   for large cases would be the <a href = "http://www.coolermaster.com/cooling/cpu-air-cooler/hyper-212-evo/">the Cooler Master
   Hyper 212 Evo</a>, a great budget cooler that usually runs around 30 dollars.
 
-	<br>
+	<br><br>
   When considering what kind of CPU you want in your own PC, you have to consider a term called bottlenecking.
   Bottlenecking happens when your GPU’s (Graphics Processing Unit) performance is hindered by the capabilities of your CPU.
   This typically occurs when a computer build has a high-end GPU and a low-end CPU. To avoid bottlenecking, you should generally choose a CPU that is close in performance to
+  your GPU. An example: you shouldn't have a 2080 series GPU with an I3 series CPU. The CPU is going to limit the potential of the GPU. Bottlenecking could result in things
+  like slowdowns, or in the case of gaming, you will not be able to get the optimal frames per second for your graphics card.
+
 </p>
 <h2>The Brands of CPU</h2>
 <p>When considering a CPU, there a two large brands in CPU production: <b>Intel</b> and <b>AMD</b>. These two brands have controlled the market of CPUs for a very long time,
@@ -58,17 +64,13 @@ powerful than AMD ones, but that doesn't mean that you shouldn't consider an AMD
     <th>Generally cheaper than Intel Processors</th>
   </tr>
 </table>
-
-
-
-
 <h2>Popular Choices</h2>
 <dl>
-  <dt>Intel i5-9600k</dt>
-  <dd>The Intel i5-9600k is a great budget CPU if you want ot use an Intel Processor in your PC build. </dd>
-  <dt>Intel i7-8700k</dt>
-  <dd>Currently, the best CPU for gaming that currently isn't way too expensive (processors in the i9 series). </dd>
-  <dt>AMD Ryzen 5 1600</dt>
+  <dt><a href= "https://www.intel.com/content/www/us/en/products/processors/core/core-vpro/i5-8600k.html">Intel i5-9600k</a></dt>
+  <dd>The Intel i5-9600k is a great budget CPU if you want to use an Intel Processor in your PC build. Has overclock potential.  </dd>
+  <dt><a href = "https://ark.intel.com/content/www/us/en/ark/products/126684/intel-core-i7-8700k-processor-12m-cache-up-to-4-70-ghz.html">Intel i7-8700k</a></dt>
+  <dd>Currently, the best CPU for gaming that currently isn't way too expensive (processors in the i9 series). Has overclock potential. </dd>
+  <dt><a href = "https://www.amd.com/en/products/cpu/amd-ryzen-5-1600">AMD Ryzen 5 1600</a></dt>
   <dd>The AMD Ryzen 5 in my eyes is a great budget CPU if you want to use a AMD Processor for your build. </dd>
 </dl>
 </main>
