--- a/sddhdd.html
+++ b/sddhdd.html
@@ -24,6 +24,13 @@
 </nav>
 <div>
 <main>
+  <p>The Solid State Drive and Hard Disk Drive will act as primary storage units for your PC's data.
+     The bare minimum you need for storage would just be an HDD, SSD's are seen as an luxuary part. Yet, I would
+     recommend that you have both: an HDD that will hold the bulk of information you want to save, and an SSD which will hold
+     all of the programs that you will frequently use.
+
+     <br><br>
+     I have provided a table showing the pros and cons for having an SSD versus an HDD.
 </main>
 <footer>
   <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu </p>
