made many changes

--- a/cpu.html
+++ b/cpu.html
@@ -7,7 +7,6 @@
 </head>
 
 <body>
-  <div id = "wrapper">
 <header>
   <h1>PC Parts Explained</h1>
 </header>
@@ -22,7 +21,7 @@
   <a href = "psu.html">PSU</a> &nbsp
   <a href = "sampleBuilds.html">Sample Builds</a>
 </nav>
-<div>
+  <div id = "wrapper">
 <main>
   <h2>The CPU</h2>
   <p>The CPU (Central Processing Unit), it a very important part as it acts as the brain of the PC.
@@ -48,6 +47,12 @@
   your GPU. An example: you shouldn't have a 2080 series GPU with an I3 series CPU. The CPU is going to limit the potential of the GPU. Bottlenecking could result in things
   like slowdowns, or in the case of gaming, you will not be able to get the optimal frames per second for your graphics card.
 
+  <br><br>
+  Overclocking is another term to look out for. Overclocking is increasing the clock rate of your CPU, higher than its intended speed. This is just to further
+  increase the performance of your PC. It is not necessary to overclock in most cases, but if you are into things like high definitition gaming or heavy
+  video editing, you may want to consider overclocking in your choice for CPU. I won't be going into overclocking any further, but here's a helpful guide on
+  <a href = "https://www.howtogeek.com/165064/what-is-overclocking-the-absolute-beginners-guide-to-understanding-how-geeks-speed-up-their-pcs/">overclocking</a> by How-To Geek.
+
 </p>
 <h2>The Brands of CPU</h2>
 <p>When considering a CPU, there a two large brands in CPU production: <b>Intel</b> and <b>AMD</b>. These two brands have controlled the market of CPUs for a very long time,
@@ -64,14 +69,21 @@ powerful than AMD ones, but that doesn't mean that you shouldn't consider an AMD
     <th>Generally cheaper than Intel Processors</th>
   </tr>
 </table>
+
 <h2>Popular Choices</h2>
 <dl>
-  <dt><a href= "https://www.intel.com/content/www/us/en/products/processors/core/core-vpro/i5-8600k.html">Intel i5-9600k</a></dt>
+  <dt><span class = "popular"><a href= "https://www.intel.com/content/www/us/en/products/processors/core/core-vpro/i5-8600k.html">Intel i5-9600k</a></span></dt>
+  <br>
   <dd>The Intel i5-9600k is a great budget CPU if you want to use an Intel Processor in your PC build. Has overclock potential.  </dd>
-  <dt><a href = "https://ark.intel.com/content/www/us/en/ark/products/126684/intel-core-i7-8700k-processor-12m-cache-up-to-4-70-ghz.html">Intel i7-8700k</a></dt>
-  <dd>Currently, the best CPU for gaming that currently isn't way too expensive (processors in the i9 series). Has overclock potential. </dd>
-  <dt><a href = "https://www.amd.com/en/products/cpu/amd-ryzen-5-1600">AMD Ryzen 5 1600</a></dt>
+  <br>
+  <dt><span class = "popular"><a href = "https://ark.intel.com/content/www/us/en/ark/products/126684/intel-core-i7-8700k-processor-12m-cache-up-to-4-70-ghz.html">Intel i7-8700k</a></span></dt>
+  <br>
+  <dd>Currently, the best CPU for gaming that currently isn't way too expensive (processors in the i9 series). Has overclock potential.</dd>
+  <br>
+  <dt><span class = "popular"><a href = "https://www.amd.com/en/products/cpu/amd-ryzen-5-1600">AMD Ryzen 5 1600</a></span></dt>
+  <br>
   <dd>The AMD Ryzen 5 in my eyes is a great budget CPU if you want to use a AMD Processor for your build. </dd>
+  <br>
 </dl>
 </main>
 <footer>
