--- a/gpu.html
+++ b/gpu.html
@@ -5,9 +5,7 @@
 <meta charset = "utf-8">
 <link rel="stylesheet" href="css/web.css">
 </head>
-
 <body>
-  <div id = "wrapper">
 <header>
     <h1> PC Parts Explained </h1>
 </header>
@@ -22,11 +20,34 @@
   <a href = "psu.html">PSU</a> &nbsp
   <a href = "sampleBuilds.html">Sample Builds</a>
 </nav>
-<div>
+  <div id = "wrapper">
 <main>
+  <h2>The GPU</h2>
+  <p>The Graphics Processing Unit (GPU) is part of your PC that will render visual aspects of the PC. It will render videos and graphics on your PC. The GPU works
+    alongside the CPU with processing these videos and graphics. The CPU sends instructions to the GPU on how to show these graphics on a computer screen.
+    For things like 3-D images, the GPU will add texture, color, lighting, etc to make the image vivid and clear.
+
+  <br><br>
+    If you are into gaming, this is what you want to know: the better your GPU is, the better graphics you will have in-game, or the higher your
+    frames per second will be a certain graphics settings. The graphics card will have to process an graphic 60 times per second for an FPS of 60 and 144 times
+    per second if you want to have a 144 hz monitor. If you are into video editing, the GPU will handle all the visual effects and animations your video has. The better your GPU is, the less time you will have
+    to wait for your PC to render videos and the smoother your video editing process will be.
+
+    <br><br>
+    Like the CPU, the GPU can also be
+
+  <br><br>
+    In today's market, two companies dominate the GPU market: NVIDIA and AMD. Currently, NVIDIA has their 2000's series of graphics cards, while AMD has their Radeon and Vega series.
+    Currently, NVIDIA has the edge on AMD: their 2000's series graphics cards reach benchmarks much higher than those of AMD, but AMD still has cards that are comparable in performance.
+    AMD parts are much more affordable than NVIDIA gpus, even if they don't reach their potential. I personally would go with a NVIDIA card, since they're more popular and you're more
+    likely going to be able to find a deal on one, making those high benchmarks more afforadable. If you went with an AMD build you will more likely go with an AMD GPU to optimize your
+    parts, but it can also use an NVIDIA GPU. Here's my personal stance (it may be a little shallow): if you have an Intel CPU, go for the more powerful NVIDIA cards. If you have an
+    AMD CPU, you can go with either or, but I would recommend getting an AMD graphics card.
 </main>
 <footer>
-  <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu </p>
+  <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu</a>
+    <br>
+    <span class = "updateinfo">Website last updated April 23, 2019</span></p>
 </footer>
 
 </div>
