--- a/home.html
+++ b/home.html
@@ -8,7 +8,6 @@
 <link rel="stylesheet" href="css/web.css">
 </head>
 <body>
-  <div id = "wrapper">
 <header>
   <h1> PC Parts Explained </h1>
 </header>
@@ -22,12 +21,12 @@
   <a href = "psu.html">PSU</a> &nbsp
   <a href = "sampleBuilds.html">Sample Builds</a>
 </nav>
-<div>
+  <div id = "wrapper">
 <main>
   <h2>Welcome</h2>
   <p>Welcome to PC Parts Explained! This website is intended for people who are interested in building their first PC, but lack the technical knowledege to feel confident in doing so.
-    I will be explaining in laymans terms the functionality of the part, and how it will affect the whole PC. I will also provide my perspective on the individual part: how much
-    I recommend spending on a part based on budget, the brands I find the best, and what power of parts is recommended based on intended specs.
+    I will be explaining in laymans terms the functionality of the part, and how it will affect the whole PC. I will also provide my perspective on the individual part: how important I
+    deem a part and how much I recommend spending on it, current popular parts, and will give some sample builds!
   <br><br>I will be going over the following parts in detail:
   <ul>
     <li><a href = "cpu.html">CPU</a></li>
