--- a/sddhdd.html
+++ b/sddhdd.html
@@ -7,7 +7,6 @@
 </head>
 
 <body>
-  <div id = "wrapper">
 <header>
     <h1> PC Parts Explained </h1>
 </header>
@@ -22,15 +21,18 @@
   <a href = "psu.html">PSU</a> &nbsp
   <a href = "sampleBuilds.html">Sample Builds</a>
 </nav>
-<div>
+  <div id = "wrapper">
 <main>
-  <p>The Solid State Drive and Hard Disk Drive will act as primary storage units for your PC's data.
-     The bare minimum you need for storage would just be an HDD, SSD's are seen as an luxuary part. Yet, I would
+  <h2>The SSD/HDD </h2>
+  <p>The Solid State Drive (SSD) and Hard Disk Drive (HDD) will act as primary storage units for your PC's data.
+     The bare minimum you need for storage would just be an HDD, SSD's are seen as an luxury part. Yet, I would
      recommend that you have both: an HDD that will hold the bulk of information you want to save, and an SSD which will hold
      all of the programs that you will frequently use.
 
      <br><br>
      I have provided a table showing the pros and cons for having an SSD versus an HDD.
+
+   </p>
 </main>
 <footer>
   <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu </p>
